--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,10 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 
+# Test (but leaving this our for now)
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'test:unit']
+
 # Build
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
