--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
 
 # Test (but leaving this our for now)
 - name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'test:unit']
+  args: ['run', 'test']
 
 # Build
 - name: 'gcr.io/cloud-builders/npm'
